deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ip-express
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ip-express
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-express
spec:
  selector:
    matchLabels:
      app: ip-express
  replicas: 2
  template:
    metadata:
      labels:
        app: ip-express
    spec:
      containers:
      - name: ip-express
        image: aloyoga/ip-express:3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
